tests/invalid/runtime/module_not_found.pts
import test.missing.{ping};

function main() : void {
    ping();
}
